After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 743257 - Popover not dismissed on clicking the header bar
Popover not dismissed on clicking the header bar
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkPopover
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2015-01-20 16:46 UTC by Carlos Soriano
Modified: 2015-01-28 17:16 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
window: Only claim the sequence if keeping the grab (1.33 KB, patch)
2015-01-25 18:00 UTC, Carlos Garnacho
committed Details | Review

Description Carlos Soriano 2015-01-20 16:46:49 UTC
When there is a popover, it is not dismissed when clicking the header bar.
For example, in gtk3-widget-factory, the action menu which contains the toggle for  Dark Theme is not dismissed when clicking the header bar.

I guess it is expected the popover is dismissed always another widget is clicked.
Comment 1 Carlos Garnacho 2015-01-25 18:00:18 UTC
Created attachment 295390 [details] [review]
window: Only claim the sequence if keeping the grab

If the grab belongs elsewhere, the window won't claim the sequence right
away. The sequence may still be claimed afterwards when window dragging
starts, but simple clicks won't be consumed this way.

This makes it possible to close popovers when clicking on the title region,
while still permitting touch/button 1 interaction for every other purpose.
Comment 2 Carlos Garnacho 2015-01-28 17:15:58 UTC
Attachment 295390 [details] pushed as 3f4df06 - window: Only claim the sequence if keeping the grab